Add basic GUI feature